<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_task">

    <!-- Task Fragment -->
    <fragment
        android:id="@+id/nav_task"
        android:name="com.example.mytodo.TasksFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_tasks" />

    <!-- Reminder Fragment -->
    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.example.mytodo.RemindersFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminders" />

    <!-- Event Fragment -->
    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.mytodo.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <!-- Notes Fragment -->
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.mytodo.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

</navigation>
