<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/lightbluee">
        <!-- Header -->
        <TextView
            android:id="@+id/productive_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            android:text="@string/productivity_tips"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Paragraph -->
        <TextView
            android:id="@+id/productive1_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productive_header"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/productivity1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productive2_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productive1_paragraph"
            android:layout_marginTop="10dp"
            android:text="@string/productivity2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productive3_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productive2_paragraph"
            android:layout_marginTop="10dp"
            android:text="@string/productivity3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productive4_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productive3_paragraph"
            android:layout_marginTop="10dp"
            android:text="@string/productivity4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productive5_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productive4_paragraph"
            android:layout_marginTop="10dp"
            android:text="@string/productivity5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>
